--- a/product-catalogs.html
+++ b/product-catalogs.html
@@ -14,27 +14,23 @@ master-slider: yes
 
 <main class="container padding-tb-30 margin-bottom-30">
   <!-- Waterblast catalog -->
-  <div class="col-sm-6 padding-right-60">
+  <div class="col-sm-4">
     <div class="row margin-bottom-30">
-      <div class="col-sm-4">
-        <a href="assets/pdf/catalogs/waterblast_2017/2017_stoneage_waterblast_catalog_LR.pdf" target="_blank" title="2016 StoneAge Waterblast Tools Catalog"><img src="assets/img/catalog_cover_wb_2017-18.jpg" class="img-responsive" alt="2017-18 StoneAge Waterblast Tools Catalog"></a>
-      </div>
-      <div class="col-sm-8">
-        <h3>2017/18 Waterblast Tools</h3>
-        <p>
-          <a href="assets/pdf/catalogs/waterblast_2017/2017_stoneage_waterblast_catalog_LR.pdf" target="_blank" title="2017-18 StoneAge Waterblast Tools Catalog"><i class="fa fa-download" aria-hidden="true"></i> Download the Waterblast Tools Catalog</a><br/>
-          <a href="/request-catalog"><i class="fa fa-book" aria-hidden="true"></i> Request a printed copy</a></p>
-        <p>
-          <a href="/assets/pdf/catalogs/waterblast_2017_sp/2017_waterblast_catalog_spanish.pdf" target="_blank" data-toggle="tooltip" title="Spanish"><img src="/assets/img/icon-Spanish-flag.png" alt="Spanish" title="Spanish" style="width:32px;" /></a> &nbsp;<a href="/assets/pdf/catalogs/waterblast_2017_de/2017_waterblast_catalog_de.pdf" target="_blank" data-toggle="tooltip" title="German"><img src="/assets/img/icon-Germany-flag.png" alt="German" title="German" style="width:32px;" /></a> &nbsp;<a href="/assets/pdf/catalogs/waterblast_2017_fr/2017_waterblast_catalog_french.pdf" target="_blank" data-toggle="tooltip" title="French"><img src="/assets/img/icon-France-flag.png" alt="French" title="French" style="width:32px;" /></a> &nbsp;<a href="/assets/pdf/catalogs/waterblast_2017_pt/2017_waterblast_catalog_portuguese.pdf" target="_blank" data-toggle="tooltip" title="Portuguese"><img src="/assets/img/icon-Brazil-flag.png" alt="Portuguese" title="Portuguese" style="width:32px;" /></a> &nbsp;<a href="/assets/pdf/catalogs/waterblast_2017_nl/2017_waterblast_catalog_dutch.pdf" target="_blank" data-toggle="tooltip" title="Dutch"><img src="/assets/img/icon-Dutch-flag.png" alt="Dutch" title="Dutch" style="width:32px;" /></a>
-        </p>
-      </div>
+      <a href="assets/pdf/catalogs/waterblast_2017/2017_stoneage_waterblast_catalog_LR.pdf" target="_blank" title="2016 StoneAge Waterblast Tools Catalog"><img src="assets/img/catalog_cover_wb_2017-18.jpg" class="img-responsive" alt="2017-18 StoneAge Waterblast Tools Catalog"></a>
+      <h3>2017/18 Waterblast Tools</h3>
+      <p>
+        <a href="assets/pdf/catalogs/waterblast_2017/2017_stoneage_waterblast_catalog_LR.pdf" target="_blank" title="2017-18 StoneAge Waterblast Tools Catalog"><i class="fa fa-download" aria-hidden="true"></i> Download the Waterblast Tools Catalog</a><br/>
+        <a href="/request-catalog"><i class="fa fa-book" aria-hidden="true"></i> Request a printed copy</a></p>
+      <p>
+        <a href="/assets/pdf/catalogs/waterblast_2017_sp/2017_waterblast_catalog_spanish.pdf" target="_blank" data-toggle="tooltip" title="Spanish"><img src="/assets/img/icon-Spanish-flag.png" alt="Spanish" title="Spanish" style="width:32px;" /></a> &nbsp;<a href="/assets/pdf/catalogs/waterblast_2017_de/2017_waterblast_catalog_de.pdf" target="_blank" data-toggle="tooltip" title="German"><img src="/assets/img/icon-Germany-flag.png" alt="German" title="German" style="width:32px;" /></a> &nbsp;<a href="/assets/pdf/catalogs/waterblast_2017_fr/2017_waterblast_catalog_french.pdf" target="_blank" data-toggle="tooltip" title="French"><img src="/assets/img/icon-France-flag.png" alt="French" title="French" style="width:32px;" /></a> &nbsp;<a href="/assets/pdf/catalogs/waterblast_2017_pt/2017_waterblast_catalog_portuguese.pdf" target="_blank" data-toggle="tooltip" title="Portuguese"><img src="/assets/img/icon-Brazil-flag.png" alt="Portuguese" title="Portuguese" style="width:32px;" /></a> &nbsp;<a href="/assets/pdf/catalogs/waterblast_2017_nl/2017_waterblast_catalog_dutch.pdf" target="_blank" data-toggle="tooltip" title="Dutch"><img src="/assets/img/icon-Dutch-flag.png" alt="Dutch" title="Dutch" style="width:32px;" /></a>
+      </p>
     </div>
 
     <div class="row">
-      <p>Select individual pages from the table of contents below:</p>
+      <h4>Individual pages:</h4>
       <table class="table table-condensed catalog-pages">
         <tr>
-          <td>Page 1:</td>
+          <td style="width:30%;">Page 1:</td>
           <td><a href="assets/pdf/catalogs/waterblast_2017/2017_stoneage_waterblast_catalog_LR1.pdf" target="_blank">Front Cover</a></td>
         </tr>
         <tr>
@@ -155,7 +151,7 @@ master-slider: yes
         </tr>
         <tr>
           <td>Page 60-61:</td>
-          <td><a href="assets/pdf/catalogs/waterblast_2017/2017_stoneage_waterblast_catalog_LR60-61.pdf" target="_blank">Yellow Jacket</a> <a href="/custom-solutions" style="color:#888;"><em>- Contact Custom Solutions if interested</em></a></td>
+          <td><a href="assets/pdf/catalogs/waterblast_2017/2017_stoneage_waterblast_catalog_LR60-61.pdf" target="_blank">Yellow Jacket</a> <a href="/custom-solutions" style="color:#888;"><em>- Contact Custom Solutions</em></a></td>
         </tr>
         <tr>
           <td>Page 62-63:</td>
@@ -167,7 +163,7 @@ master-slider: yes
         </tr>
         <tr>
           <td>Page 66-67:</td>
-          <td><a href="assets/pdf/catalogs/waterblast_2017/2017_stoneage_waterblast_catalog_LR66-67.pdf" target="_blank">Blackhawk</a> <a href="/custom-solutions" style="color:#888;"><em>- Contact Custom Solutions if interested</em></a></td>
+          <td><a href="assets/pdf/catalogs/waterblast_2017/2017_stoneage_waterblast_catalog_LR66-67.pdf" target="_blank">Blackhawk</a> <a href="/custom-solutions" style="color:#888;"><em>- Contact Custom Solutions</em></a></td>
         </tr>
         <tr>
           <td>Page 68-69:</td>
@@ -306,28 +302,24 @@ master-slider: yes
   </div>    
 
   <!-- Sewer Catalog -->
-  <div class="col-sm-6 padding-left-60">
+  <div class="col-sm-4">
     <div class="row margin-bottom-30">
-      <div class="col-sm-4">
-        <a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_final.pdf" target="_blank" title="2017-18 StoneAge Warthog Sewer Tools Catalog"><img src="assets/img/catalog_cover_sewer_2018-19.jpg" class="img-responsive" alt="2018-19 StoneAge Warthog Sewer Tools Catalog"></a>
-      </div>
-      <div class="col-sm-8">
-        <h3>2018/19 Sewer Tools</h3>
-        <p><a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_final.pdf" target="_blank" title="2018-19 StoneAge Warthog Sewer Tools Catalog"><i class="fa fa-download" aria-hidden="true"></i> Download the Sewer Tools Catalog</a><br/>
-          <a href="/request-catalog"><i class="fa fa-book" aria-hidden="true"></i> Request a printed copy</a></p>
-        <p>
-          <a href="/assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_SP_web.pdf" target="_blank" data-toggle="tooltip" title="Spanish"><img src="/assets/img/icon-Spanish-flag.png" alt="Spanish" title="Spanish" style="width:32px;" /></a> &nbsp;
-          <a href="/assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_004_GER_A4_LR.pdf" target="_blank" data-toggle="tooltip" title="German"><img src="/assets/img/icon-Germany-flag.png" alt="German" title="German" style="width:32px;" /></a> &nbsp;
-          <a href="/assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_FR_web.pdf" target="_blank" data-toggle="tooltip" title="French"><img src="/assets/img/icon-France-flag.png" alt="French" title="French" style="width:32px;" /></a>
-        </p>
-      </div>
+      <a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_final.pdf" target="_blank" title="2017-18 StoneAge Warthog Sewer Tools Catalog"><img src="assets/img/catalog_cover_sewer_2018-19.jpg" class="img-responsive" style="max-height:389px;" alt="2018-19 StoneAge Warthog Sewer Tools Catalog"></a>
+      <h3>2018/19 Sewer Tools</h3>
+      <p><a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_final.pdf" target="_blank" title="2018-19 StoneAge Warthog Sewer Tools Catalog"><i class="fa fa-download" aria-hidden="true"></i> Download the Sewer Tools Catalog</a><br/>
+        <a href="/request-catalog"><i class="fa fa-book" aria-hidden="true"></i> Request a printed copy</a></p>
+      <p>
+        <a href="/assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_SP_web.pdf" target="_blank" data-toggle="tooltip" title="Spanish"><img src="/assets/img/icon-Spanish-flag.png" alt="Spanish" title="Spanish" style="width:32px;" /></a> &nbsp;
+        <a href="/assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_004_GER_A4_LR.pdf" target="_blank" data-toggle="tooltip" title="German"><img src="/assets/img/icon-Germany-flag.png" alt="German" title="German" style="width:32px;" /></a> &nbsp;
+        <a href="/assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_FR_web.pdf" target="_blank" data-toggle="tooltip" title="French"><img src="/assets/img/icon-France-flag.png" alt="French" title="French" style="width:32px;" /></a>
+      </p>
     </div>
 
     <div class="row">
-      <p>Select individual pages from the table of contents below:</p>
+      <h4>Individual pages:</h4>
       <table class="table table-condensed catalog-pages">
         <tr>
-          <td>Page 1:</td>
+          <td style="width:30%;">Page 1:</td>
           <td><a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_01.pdf" target="_blank">Front Cover</a></td>
         </tr>
         <tr>
@@ -414,6 +406,171 @@ master-slider: yes
     </div>
   </div>
   <!-- End Sewer Catalog -->
+  
+  <!-- FA Catalog -->
+  <div class="col-sm-4">
+    <div class="row margin-bottom-30">
+      <a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web.pdf" target="_blank" title="StoneAge Fittings and Accessories Catalog"><img src="assets/img/catalog_cover_fa_2018-19.jpg" style="max-height:389px;" class="img-responsive" alt="2018-19 StoneAge Fittings and Accessories Catalog"></a>
+      <h3>2018/19 Fittings &amp; Accessories</h3>
+      <p><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web.pdf" target="_blank" title="StoneAge Fittings and Accessories Catalog"><i class="fa fa-download" aria-hidden="true"></i> Download the Fittings &amp; Accessories Catalog</a><br/>
+<!--      <a href="/request-catalog"><i class="fa fa-book" aria-hidden="true"></i> Request a printed copy</a>-->
+      </p>
+      <p style="height:65px;">
+<!--
+        <a href="/assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_SP_web.pdf" target="_blank" data-toggle="tooltip" title="Spanish"><img src="/assets/img/icon-Spanish-flag.png" alt="Spanish" title="Spanish" style="width:32px;" /></a> &nbsp;
+        <a href="/assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_004_GER_A4_LR.pdf" target="_blank" data-toggle="tooltip" title="German"><img src="/assets/img/icon-Germany-flag.png" alt="German" title="German" style="width:32px;" /></a> &nbsp;
+        <a href="/assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_FR_web.pdf" target="_blank" data-toggle="tooltip" title="French"><img src="/assets/img/icon-France-flag.png" alt="French" title="French" style="width:32px;" /></a>
+-->
+      </p>
+    </div>
+
+    <div class="row">
+      <h4>Individual pages:</h4>
+      <table class="table table-condensed catalog-pages">
+        <tr>
+          <td style="width:25%;">Page 1:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_01.pdf" target="_blank">Front Cover - <strong>15k psi/1000 bar</strong></a></td>
+        </tr>
+        <tr>
+          <td>Page 2:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_02.pdf" target="_blank">Pressure Gauges, Thread Protection</a></td>
+        </tr>
+        <tr>
+          <td>Page 3:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_03.pdf" target="_blank">Whip Restraints, Lubricants</a></td>
+        </tr>
+        <tr>
+          <td>Page 4:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_04.pdf" target="_blank">Flex Lances</a></td>
+        </tr>
+        <tr>
+          <td>Page 5:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_05.pdf" target="_blank">Coulpings</a></td>
+        </tr>
+        <tr>
+          <td>Page 6:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_06.pdf" target="_blank">Dump Valves, Cartridges</a></td>
+        </tr>
+        <tr>
+          <td>Page 7:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_07.pdf" target="_blank">Unions, Reducers</a></td>
+        </tr>
+        <tr>
+          <td>Page 8:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_08.pdf" target="_blank">Couplings</a></td>
+        </tr>
+        <tr>
+          <td>Page 9:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_09.pdf" target="_blank">Stingers, Plugs</a></td>
+        </tr>
+        <tr>
+        <td>Page 10:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_10.pdf" target="_blank">Tees, Elbows, Y-Fittings</a></td>
+        </tr>
+        <tr>
+          <td>Page 11:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_11.pdf" target="_blank">Hex Nipples, NPT to Type M Adapters</a></td>
+        </tr>
+        <tr>
+        <td>Page 12:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_12.pdf" target="_blank">NPT to MP Adapters</a></td>
+        </tr>
+        <tr>
+          <td>Page 13:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_13.pdf" target="_blank">NPT, Type M Size Reference</a></td>
+        </tr>
+        <tr>
+          <td>Page 14:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_14.pdf" target="_blank"><strong>20k psi/1380 bar</strong></a></td>
+        </tr>
+        <tr>
+        <td>Page 15:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_15.pdf" target="_blank">Flex Lances</a></td>
+        </tr>
+        <tr>
+        <td>Page 16:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_16.pdf" target="_blank">Flex Lances, Type M Connectors</a></td>
+        </tr>
+        <tr>
+        <td>Page 17:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_17.pdf" target="_blank">Thread Protection, Lubricants</a></td>
+        </tr>
+        <tr>
+        <td>Page 18:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_18.pdf" target="_blank">Cartridges, Rupture Discs</a></td>
+        </tr>
+        <tr>
+        <td>Page 19:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_19.pdf" target="_blank">Tees, Elbows</a></td>
+        </tr>
+        <tr>
+          <td>Page 20:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_20.pdf" target="_blank">Couplings</a></td>
+        </tr>
+        <tr>
+          <td>Page 21:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_21.pdf" target="_blank">Couplings, Gland Assemblies</a></td>
+        </tr>
+        <tr>
+          <td>Page 22:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_22.pdf" target="_blank">Couplings, Gland Assemblies</a></td>
+        </tr>
+        <tr>
+          <td>Page 23:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_23.pdf" target="_blank">Nipples</a></td>
+        </tr>
+        <tr>
+          <td>Page 24:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_24.pdf" target="_blank">SLimline Couplings, Manifolds</a></td>
+        </tr>
+        <tr>
+          <td>Page 25:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_25.pdf" target="_blank">Dump Valves, Cartridges</a></td>
+        </tr>
+        <tr>
+          <td>Page 26:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_26.pdf" target="_blank">MP Size Reference</a></td>
+        </tr>
+        <tr>
+          <td>Page 27:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_27.pdf" target="_blank">MP, Type M Size Reference</a></td>
+        </tr>
+        <tr>
+          <td>Page 28:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_28.pdf" target="_blank"><strong>40k psi/2800 bar</strong></a></td>
+        </tr>
+        <tr>
+          <td>Page 29:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_29.pdf" target="_blank">Flex Lances</a></td>
+        </tr>
+        <tr>
+          <td>Page 30:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_30.pdf" target="_blank">Thread Protection, Cartridges</a></td>
+        </tr>
+        <tr>
+          <td>Page 31:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_31.pdf" target="_blank">Couplings</a></td>
+        </tr>
+        <tr>
+          <td>Page 32:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_32.pdf" target="_blank">Gland Assemblies, Y-Adapters, Nipples, Manifolds</a></td>
+        </tr>
+        <tr>
+          <td>Page 33:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_33.pdf" target="_blank">MP Size Reference</a></td>
+        </tr>
+        <tr>
+          <td>Page 34:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_34.pdf" target="_blank">HP, Type M Size Reference</a></td>
+        </tr>
+        <tr>
+          <td>Page 35:</td>
+          <td><a href="assets/pdf/catalogs/fa_2018/2018_stonage_fittings_and_accessories_web_35.pdf" target="_blank">Back Cover</a></td>
+        </tr>
+      </table>
+    </div>
+  </div>
+  <!-- End FA Catalog -->
 </main>
 
 {% include footer-cta.html %}
