--- a/request-catalog.html
+++ b/request-catalog.html
@@ -34,11 +34,15 @@ permalink: /request-catalog
     <h2 class="section-heading">Product Catalogs</h2>
     <p>Check out the online versions while you wait for your copy to arrive!</p>
     <div class="row margin-bottom-30">
-      <a href=product-catalogs.html><img src="assets/img/catalog_cover_wb_2017-18.jpg" class="img-responsive" alt="2017-18 StoneAge Waterblast Tools Catalog">
+      <a href=product-catalogs.html><img src="assets/img/catalog_cover_wb_2017-18.jpg" class="img-responsive" style="max-height: 260px;" alt="2017-18 StoneAge Waterblast Tools Catalog">
       </a>
     </div>
     <div class="row margin-bottom-30">
-      <a href=product-catalogs.html><img src="assets/img/catalog_cover_sewer_2018-19.jpg" class="img-responsive" alt="2018-19 StoneAge Warthog Sewer Catalog">
+      <a href=product-catalogs.html><img src="assets/img/catalog_cover_sewer_2018-19.jpg" class="img-responsive" style="max-height: 260px;" alt="2018-19 StoneAge Warthog Sewer Catalog">
+      </a>
+    </div>
+    <div class="row margin-bottom-30">
+      <a href=product-catalogs.html><img src="assets/img/catalog_cover_fa_2018-19.jpg" class="img-responsive" style="max-height: 260px;" alt="2018-19 StoneAge Fittings and Accessories Catalog">
       </a>
     </div>
   </div>
