Product Manuals page updates

--- a/index.html
+++ b/index.html
@@ -435,6 +435,7 @@ landing: yes
       <h2>Events</h2>
     </div>
     
+<!--
     <div class="row" style="margin-top:15px;">
       <a href="https://www.waterjetting.org.uk/news/bhr-group-24th-international-conference-on-water-jetting/" target="_blank"><img src="/assets/img/thumb/upcoming_events_wja_2018.png" class="img-responsive"/ alt="24th International Conference on Water Jetting"></a>
       <div class="caption text-center">
@@ -442,8 +443,9 @@ landing: yes
           <span class="small"><strong>5th and 6th September 2018<br>Manchester, UK</strong></span></h4>
       </div>
     </div>
+-->
     
-    <div class="row" style="padding-top:25px;">
+    <div class="row">
       <a href="http://www.tristateseminar.com/events/34th-annual-tri-state-seminar/event-summary-773bd828620148b3981ee7746e5bdee7.aspx" target="_blank"><img src="/assets/img/thumb/upcoming_events_tristate_2018.png" class="img-responsive"/ alt="Tri-State Seminar"></a>
       <div class="caption text-center">
         <h4><a href="http://www.tristateseminar.com/events/34th-annual-tri-state-seminar/event-summary-773bd828620148b3981ee7746e5bdee7.aspx" target="_blank">34th  Annual Tri-State Seminar</a><br>
