--- a/manuals.html
+++ b/manuals.html
@@ -723,19 +723,19 @@ permalink: /manuals
                 <td>ABX-500</td>
                 <td>AUTOBOX ABX-500 - Version 1<!--<br>Serial numbers XXX-XXXX <em class="grey" data-toggle="tooltip" data-placement="top" title="Just take a look at the bottom of the box, bro!"><i class="fa fa-info-circle"></i> Which one do I have?</em></td>-->
                 <td class="text-center"><a href="/assets/pdf/manuals/ABX-2L_manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
-                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_ABX-500.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
                 <td>AST-100-2L</td>
                 <td>AutoStroke<br>For use with AutoBox hose tractors</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/AST-100_User_Manual.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
-                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_AST-100-2L.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
                 <td>BADGER 2"</td>
                 <td>NON-LOCKING HEAD VERSION<br>Models: BA-P4, BA-BSPP4, BA-MP9L, BA-MP9R</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/BA_2inch_Manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
-                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_BA2.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
                 <td>BC 405</td>
@@ -765,13 +765,13 @@ permalink: /manuals
                 <td>BUD</td>
                 <td>Slotted rail tractor drive</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/BUD_Manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
-                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_BUD.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
                 <td>CDA</td>
                 <td>Concrete demolition attachment</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/CDA_Manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
-                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_CDA.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
                 <td>CY</td>
@@ -825,13 +825,13 @@ permalink: /manuals
                 <td>PTL-2000, PTL-2412</td>
                 <td>PORTA-LANCE<br>Portable hand-lancing tool</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/PTL-2400_Manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
-                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_PLT.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
                 <td>RJV</td>
                 <td>Self-rotary swivel</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/RJV_Manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
-                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_RJV.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
                 <td>SA 1940</td>
@@ -843,13 +843,13 @@ permalink: /manuals
                 <td>SL-H9H9</td>
                 <td>High pressire water swivel</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/SL-H9H9_Manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
-                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_SL-H9H9.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
                 <td>SPF</td>
                 <td>SPITFIRE<br>Rotary shotgun nozzle models: SPF-P8, SPF-MP9</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/SPF_Manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
-                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_SPF.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
                 <td>TR-100</td>
