PA catalog updates, misc

--- a/about-stoneage.html
+++ b/about-stoneage.html
@@ -176,6 +176,9 @@ master-slider: yes
         <a href="https://www.nassco.org/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-nassco.png" alt="NASSCO"></a>
       </div>
       <div class="item">
+        <a href="https://www.sprintrobotics.org/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-sprint.png" alt="Sprint Robotics"></a>
+      </div>
+      <div class="item">
         <a href="http://www.esopassociation.org/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-esop.png" alt="The ESOP Association"></a>
       </div>
       <div class="item">
