--- a/index.html
+++ b/index.html
@@ -554,6 +554,9 @@ landing: yes
         <a href="https://www.sir-safe.nl/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-sir.png" alt="SIR"></a>
       </div>
       <div class="item">
+        <a href="https://www.sprintrobotics.org/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-sprint.png" alt="Sprint Robotics"></a>
+      </div>
+      <div class="item">
         <a href="https://www.nassco.org/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-nassco.png" alt="NASSCO"></a>
       </div>
       <div class="item">
