--- a/loc-europe.html
+++ b/loc-europe.html
@@ -136,7 +136,7 @@ contact-uk: yes
           <div class="col-sm-6">
             <p><strong>Alison Berry</strong><br/>
               Main: +44 (0) 1684 892065<br/>
-            <a href="mailto:Johanna.Spaeth@stoneagetools.com">johanna.spaeth@stoneagetools.com</a></p>
+            <a href="mailto:alison.berry@stoneagetools.com">alison.berry@stoneagetools.com</a></p>
           </div>
         </div>
 
