--- a/waterblast-automation/air-knife.html
+++ b/waterblast-automation/air-knife.html
@@ -59,7 +59,7 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
 
-      <p class="product-description">The Air Knife is an accessory for AutoBox <a href="/abx-2l">ABX-2L</a> and <a href="/abx-3l">ABX-3L</a> tractors designed to improve hose traction in oily, greasy, or sticky applications. The Air Knife sits between the tube face and the AutoBox, blowing a continuous “blade” of pressurized air across the hoses before they are retracted back into the tractor. In this way, effluent is kept out of the equipment, preventing performance issues and and increasing component life.</p>
+      <p class="product-description">The Air Knife is an accessory for AutoBox <a href="/abx-2l">ABX-2L</a> and <a href="/abx-3l">ABX-3L</a> tractors designed to improve hose traction in oily, greasy, or sticky applications. The Air Knife sits between the tube face and the AutoBox, blowing a continuous “blade” of pressurized air across the hoses before they are retracted back into the tractor. In this way, effluent is kept out of the equipment, preventing performance issues and increasing component life.</p>
       <h2>Features</h2>
       <ul class="feature-list">
         <li>Removes contamination on hoses, improving hose traction and allowing the tractor to be run at lower clamp pressures</li>
