--- a/waterblast-automation/outside-diameter-pipe-cleaner.html
+++ b/waterblast-automation/outside-diameter-pipe-cleaner.html
@@ -82,7 +82,7 @@ master-slider: yes
     <nav>
       <ul>
         <li><a href="#section-bar-1"><span>Specifications</span></a></li>
-<!--        <li><a href="#section-bar-2"><span>Manuals/Docs</span></a></li>-->
+        <li><a href="#section-bar-2"><span>Manuals/Docs</span></a></li>
 <!--        <li><a href="#section-bar-3"><span>Videos</span></a></li>-->
 <!--        <li><a href="#section-bar-4"><span>Service Kits</span></a></li>-->
       </ul>
@@ -132,6 +132,21 @@ master-slider: yes
           </table>
         </div>
         <aside class="col-sm-3 col-sm-offset-4 aside-box">
+          <h3>Need Support?</h3>
+          <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+          <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
+        </aside>
+      </section>
+      
+      <!-- Manuals/Docs -->
+      <section id="section-bar-2">
+        <div class="col-sm-8">
+          <ul class="list-unstyled basic">
+            <h3>Documentation</h3>
+            <li><a href="/assets/pdf/catalogs/waterblast_2017/2017_stoneage_waterblast_catalog_LR46-47.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;OD Pipe Cleaner Data Sheet</a></li>
+          </ul>
+        </div>
+        <aside class="col-sm-3 col-sm-offset-1 aside-box">
           <h3>Need Support?</h3>
           <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
           <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
