--- a/waterblast-automation/torus-tr-130.html
+++ b/waterblast-automation/torus-tr-130.html
@@ -183,7 +183,7 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Manuals</h3>
-            <li><a href="/assets/pdf/manuals/TR-130_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-130 Manual</a></li>
+            <li><a href="/assets/pdf/manuals/Torus_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Torus Manual</a></li>
             <li><a href="/assets/pdf/manuals/TR-130_Fastener_Assembly_Instructions.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-130 Fastener Assembly Instructions</a></li>
           </ul>
         </div>
