--- a/waterblast-automation/torus-tr-200.html
+++ b/waterblast-automation/torus-tr-200.html
@@ -177,7 +177,7 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Manuals</h3>
-            <li><a href="/assets/pdf/manuals/TR-200_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-200 Manual</a></li>
+            <li><a href="/assets/pdf/manuals/Torus_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Torus Manual</a></li>
             <li><a href="/assets/pdf/manuals/TR-200_Fastener_Assembly_Instructions.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-200 Fastener Assembly Instructions</a></li>
           </ul>
         </div>
