--- a/manuals.html
+++ b/manuals.html
@@ -76,7 +76,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/abx-3l">ABX-3L-V2</a><br></td>
                 <td>AUTOBOX ABX-3L-V2<br>Automated system for triple flex lancing of exchanger tube IDs</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/ABX-3L_manual.pdf" target="_blank" class="btn btn-sm">PL 630</a><br><small class="grey">Updated: 09/2018</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/ABX-3L_manual.pdf" target="_blank" class="btn btn-sm">PL 630</a><br><small class="grey">Updated: 10/2018</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/ABX-3L_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/ABX-3L_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 08/2018</small></td>
                 <td class="text-center"></td>
@@ -116,7 +116,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/2inch-badger">BA-LK-P4, BA-BSPP4,<br>BA-MP6R, BA-MP9L,<br>BA-MP9R</a></td>
                 <td>2" BADGER<br>Rotary pipe cleaning nozzles</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BA_manual.pdf" target="_blank" class="btn btn-sm">PL 663</a><br><small class="grey">Updated: 09/2018</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BA_manual.pdf" target="_blank" class="btn btn-sm">PL 663</a><br><small class="grey">Updated: 10/2018</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BA2_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 11/2017</small></td>
                 <td class="text-center"></td>
@@ -132,7 +132,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/4inch-badger">BA-P6, BA-BSPP6,<br>BA-TM12</a></td>
                 <td>4" BADGER<br>Rotary pipe cleaning nozzles</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BA_manual.pdf" target="_blank" class="btn btn-sm">PL 663</a><br><small class="grey">Updated: 09/2018</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BA_manual.pdf" target="_blank" class="btn btn-sm">PL 663</a><br><small class="grey">Updated: 10/2018</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BA4_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 06/2018</small></td>
                 <td class="text-center"></td>
@@ -140,7 +140,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/6inch-badger">BA-P8, BA-MP9,<br>BA-M24</a></td>
                 <td>6" BADGER<br>Rotary pipe cleaning nozzles</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BA_manual.pdf" target="_blank" class="btn btn-sm">PL 663</a><br><small class="grey">Updated: 09/2018</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BA_manual.pdf" target="_blank" class="btn btn-sm">PL 663</a><br><small class="grey">Updated: 10/2018</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BA6_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 02/2017</small></td>
                 <td class="text-center"></td>
@@ -254,13 +254,13 @@ permalink: /manuals
                 <td>RIGID LANCE MACHINE<br>Rigid lancing system for exchanger tube cleaning</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/BRLM_Manual.pdf" target="_blank" class="btn btn-sm">PL 665</a><br><small class="grey">Updated: 06/2018</small></td>
                 <td class="text-center"></td>
-                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/tool-talks/BRLM_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 10/2018</small></td>
                 <td class="text-center"><a href="/assets/pdf/reference/Lancing_System_Assembly_Instructions.pdf" target="_blank" class="btn btn-sm">Guide</a></td>
               </tr>
               <tr>
                 <td><a href="/beetle">BT12, BT18, BT25</a></td>
                 <td>BEETLE<br>Rotary pipe and tube cleaning nozzle </td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BT_manual.pdf" target="_blank" class="btn btn-sm">PL 601</a><br><small class="grey">Updated: 08/2018</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BT_manual.pdf" target="_blank" class="btn btn-sm">PL 601</a><br><small class="grey">Updated: 10/2018</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/BT_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BT_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 02/2017</small></td>
                 <td class="text-center"></td>
