FA catalog + misc updates

--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -136,8 +136,11 @@
 <div id="bn-deburr-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/ojuedcFk19g?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
-<div id="bn-maint-vid">
-  <iframe width="854" height="480" src="https://www.youtube.com/embed/cWRA6gtS2qI?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+<div id="bn22-maint-vid">
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/BL_flatJnc8?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
+<div id="bn40-maint-vid">
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/dEdxJn-5aRw?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
 <div id="bc-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/AqTlBprieP0?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
