--- a/rotary-waterblast-tools/banshee-tube-cleaners.html
+++ b/rotary-waterblast-tools/banshee-tube-cleaners.html
@@ -788,12 +788,22 @@ master-slider: yes
               <div class="col-sm-4 col-centered">
                 <!-- Lightbox call -->
                 <div>
-                  <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #bn-maint-vid">
-                    <img src="/assets/vid/thumb/bn-maint-vid.png" alt="Banshee Tool Maintenance Video" class="img-responsive" />
+                  <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #bn22-maint-vid">
+                    <img src="/assets/vid/thumb/bn22-maint-vid.jpg" alt="22k Banshee Tool Maintenance Video" class="img-responsive" />
                   </a>
                 </div>
                 <!-- End Lightbox call -->
-                <p class="caption">Banshee Maintenance</p>
+                <p class="caption">Banshee Maintenance (up to 22k psi/1500 bar)</p>
+              </div>
+              <div class="col-sm-4 col-centered">
+                <!-- Lightbox call -->
+                <div>
+                  <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #bn40-maint-vid">
+                    <img src="/assets/vid/thumb/bn40-maint-vid.jpg" alt="40k Banshee Tool Maintenance Video" class="img-responsive" />
+                  </a>
+                </div>
+                <!-- End Lightbox call -->
+                <p class="caption">44k Banshee Maintenance (up to 44k psi/3000 bar)</p>
               </div>
             </div>
           </section>
