--- a/sewer-tools-nozzles/warthog-whr-hybrid-switcher.html
+++ b/sewer-tools-nozzles/warthog-whr-hybrid-switcher.html
@@ -170,7 +170,7 @@ range of applications</li>
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Manuals</h3>
-                <li><a href="/assets/pdf/manuals/WHR-SWT_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WHR Switcher Manual</a></li>
+                <li><a href="/assets/pdf/manuals/WHR-SWT-HYB_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WHR Switcher Hybrid Manual</a></li>
               </ul>
             </div>
             <div class="col-sm-4">
