--- a/rotary-waterblast-tools/beetle.html
+++ b/rotary-waterblast-tools/beetle.html
@@ -332,7 +332,7 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
-<!--                <li><a href="/assets/pdf/data-sheets/BT_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Beetle Data Sheet</a></li>-->
+                <li><a href="/assets/pdf/data-sheets/BT_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Beetle Data Sheet</a></li>
                 <li><a href="/assets/pdf/data-sheets/BT95_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Beetle BT9.5 Data Sheet</a></li>
                 <li><a href="/assets/pdf/tool-talks/BT_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Beetle Tool Talk</a></li>
               </ul>
