--- a/rotary-waterblast-tools/raptor-pipe-cleaning.html
+++ b/rotary-waterblast-tools/raptor-pipe-cleaning.html
@@ -408,14 +408,14 @@ master-slider: yes
                   </div>
                 </div>
                 <div class="panel panel-default">
-                  <div class="panel-heading" role="tab" id="heading1">
+                  <div class="panel-heading" role="tab" id="heading2">
                     <h4 class="panel-title">
-                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse1" aria-expanded="false" aria-controls="collapse1">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse2" aria-expanded="false" aria-controls="collapse2">
                         <strong>RPT 600-S</strong> Service Kit for RPT-P8/RPT-MP9/RPT-M24 - Slow Rotation<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
-                  <div id="collapse1" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading1">
+                  <div id="collapse2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading2">
                     <div class="panel-body">
                       <div class="row">
                         <div class="col-sm-6">
@@ -424,6 +424,7 @@ master-slider: yes
                             <li>1 x <strong>BJ 012-TRO</strong> H.P. Seal &amp; O-Ring</li>
                             <li>1 x <strong>BJ 026</strong> Port Plug</li>
                             <li>1 x <strong>BJ 048-S</strong> Viscous Fluid, Slow - 6oz.</li>
+                            <li>1 x <strong>PL 543</strong> Tool manual</li>
                           </ul>
                         </div>
                       </div>
