--- a/waterblast-automation/floor-cleaner.html
+++ b/waterblast-automation/floor-cleaner.html
@@ -69,7 +69,7 @@ master-slider: yes
         <li>Concrete scarification</li>
       </ul>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
+      <a href="/custom-solutions" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">No longer available - contact custom solutions</a>
 
   </div>
 
