--- a/waterblast-automation/yellow-jacket-boiler-cleaner.html
+++ b/waterblast-automation/yellow-jacket-boiler-cleaner.html
@@ -86,7 +86,7 @@ master-slider: yes
         <li>Remote dump control available</li>
       </ul>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
+      <a href="/custom-solutions" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">No longer available - contact custom solutions</a>
 
   </div>
 
