dealer and translation updates

--- a/loc-durango.html
+++ b/loc-durango.html
@@ -83,7 +83,7 @@ contact-durango: yes
           </div>
           <div class="col-sm-6">
             <p><strong>Mike Kreeger</strong><br/>
-              SAS Technical Sales Lead<br/>
+              Solutions Technical Sales Lead<br/>
               Main: +1 (970) 403-1437<br/>
               <a href="mailto:mike.kreeger@stoneagetools.com">mike.kreeger@stoneagetools.com</a></p>
           </div>
