--- a/rotary-waterblast-tools/banshee-tube-cleaners.html
+++ b/rotary-waterblast-tools/banshee-tube-cleaners.html
@@ -41,10 +41,6 @@ master-slider: yes
             <img class="ms-thumb" src="/assets/img/product/thumb-banshee-02.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="/assets/img/blank.gif" data-src="/assets/img/product/banshee-05.jpg" alt="Banshee rotary tube cleaning nozzles">
-            <img class="ms-thumb" src="/assets/img/product/thumb-banshee-05.jpg" alt="thumb">
-          </div>
-          <div class="ms-slide">
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/banshee-06.jpg" alt="Banshee rotary tube cleaning nozzles">
             <img class="ms-thumb" src="/assets/img/product/thumb-banshee-06.jpg" alt="thumb">
           </div>
@@ -193,7 +189,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Tool Model</th>
-                      <td colspan="2">BN13, BNS13</td>
+                      <td colspan="2">BN13</td>
                     </tr>
                     <tr>
                       <th>Tube ID Range</th>
